testcases/error-cases/string-interpolation-error-01/error.txt
error[E0015]: unterminated template string
 --> testcases\error-cases\string-interpolation-error-01\input.canon:3:1
  |
1 | val name = "Test"
2 | val message = `Hello, ${name}!
3 | 
  | ^
  |
  = note: extraneous input '<EOF>' expecting {TEMPLATE_STRING_END, TEMPLATE_STRING_PART, '${', TEMPLATE_INTERPOLATION_SIMPLE}
  = note: template strings must be closed with a backtick
  = help: add a closing backtick (`) to end your template string
